--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,7 +22,7 @@ services:
     ports:
       - "3000:3000"
     volumes:
-      - /frontend:/app
-      - /frontend/node_modules
-    environment:
-      - NODE_ENV=development
+      - ./frontend:/app
+      - /app/node_modules
+    env_file:
+      - frontend/.env
