--- a/frontend/.env
+++ b/frontend/.env
@@ -1,4 +1,5 @@
-BACKEND_BASE_URL=http://api:8080
+BACKEND_BASE_URL=http://backend:8080
 NEXTAUTH_SECRET=atr5-gt65-9jet
 NEXTAUTH_URL=http://localhost:3000/
 BASE_URL=http://localhost:3000
+NODE_ENV=development
