--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,6 +4,8 @@ services:
     build: ./backend
     ports:
       - "8080:8080"
+    volumes:
+      - ./backend:/app
     depends_on:
       - db
     env_file:
