--- a/k8s/frontend-deployment.yaml
+++ b/k8s/frontend-deployment.yaml
@@ -18,13 +18,13 @@ spec:
       - name: frontend
         image: manjurulhoque/edu-pulse-frontend:latest
         env:
-          - name: BACKEND_BASE_URL
+          - name: NEXT_PUBLIC_BACKEND_BASE_URL
             value: "http://backend-service:8080"
           - name: NEXTAUTH_SECRET
             value: "atr5-gt65-9jet"
           - name: NEXTAUTH_URL
             value: "http://localhost:3000/"
-          - name: BASE_URL
+          - name: NEXT_PUBLIC_BASE_URL
             value: "http://localhost:3000"
           - name: NODE_ENV
             value: "development"
