--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -26,5 +26,9 @@ services:
     volumes:
       - ./frontend:/app
       - /app/node_modules
-    env_file:
-      - frontend/.env
+    environment:
+      NEXT_PUBLIC_BACKEND_BASE_URL: "http://backend:8080"
+      NEXTAUTH_SECRET: "atr5-gt65-9jet"
+      NEXTAUTH_URL: "http://localhost:3000/"
+      NEXT_PUBLIC_BASE_URL: "http://localhost:3000"
+      NODE_ENV: "development"
