--- a/frontend/.env.example
+++ b/frontend/.env.example
@@ -1,4 +1,4 @@
-NEXT_PUBLIC_BACKEND_BASE_URL=http://backend:8080
+NEXT_PUBLIC_BACKEND_BASE_URL=http://localhost:8080
 NEXTAUTH_SECRET=atr5-gt65-9jet
 NEXTAUTH_URL=http://localhost:3000/
 NEXT_PUBLIC_BASE_URL=http://localhost:3000
