--- a/frontend/.env.example
+++ b/frontend/.env.example
@@ -1,5 +1,5 @@
-NEXT_PUBLIC_BACKEND_BASE_URL=http://localhost:8080
-NEXTAUTH_SECRET=atr5-gt65-9jet
-NEXTAUTH_URL=http://localhost:3000/
-NEXT_PUBLIC_BASE_URL=http://localhost:3000
-NODE_ENV=development
+#NEXT_PUBLIC_BACKEND_BASE_URL=http://localhost:8080
+#NEXTAUTH_SECRET=atr5-gt65-9jet
+#NEXTAUTH_URL=http://localhost:3000/
+#NEXT_PUBLIC_BASE_URL=http://localhost:3000
+#NODE_ENV=development
