--- a/docker-compose-dev.yml
+++ b/docker-compose-dev.yml
@@ -26,3 +26,9 @@ services:
     volumes:
       - ./frontend:/app
       - /app/node_modules
+    environment:
+      BACKEND_BASE_URL: "http://localhost:8080"
+      NEXTAUTH_SECRET: "atr5-gt65-9jet"
+      NEXTAUTH_URL: "http://localhost:3000/"
+      NEXT_PUBLIC_BASE_URL: "http://localhost:3000"
+      NODE_ENV: "development"
