--- a/docker-compose-dev.yml
+++ b/docker-compose-dev.yml
@@ -26,7 +26,10 @@ services:
       - edu-pulse-network
 
   frontend:
-    build: ./frontend
+    build:
+      context: ./frontend
+#      args:
+#        BACKEND_BASE_URL: http://backend:8080
     ports:
       - "3000:3000"
     volumes:
@@ -34,16 +37,18 @@ services:
       - /app/node_modules
     environment:
       BACKEND_BASE_URL: "http://backend:8080"
+      NEXT_PUBLIC_BACKEND_BASE_URL: "http://localhost:8080"
       NEXTAUTH_SECRET: "atr5-gt65-9jet"
-      NEXTAUTH_URL: "http://frontend:3000/"
-      NEXT_PUBLIC_BASE_URL: "http://frontend:3000"
+      NEXTAUTH_URL: "http://localhost:3000/"
+      NEXT_PUBLIC_BASE_URL: "http://localhost:3000"
+      BASE_URL: "http://localhost:3000"
       NODE_ENV: "development"
     networks:
       - edu-pulse-network
 
 networks:
   edu-pulse-network:
-      driver: bridge
+    driver: bridge
 
 volumes:
   db-data:
