--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -7,6 +7,9 @@ RUN npm install
 
 COPY . .
 
+ARG BACKEND_BASE_URL
+ENV BACKEND_BASE_URL=${BACKEND_BASE_URL}
+
 EXPOSE 3000
 
 CMD ["npm", "run", "dev"]
