--- a/frontend/Dockerfile.dev
+++ b/frontend/Dockerfile.dev
@@ -2,9 +2,13 @@ FROM node:18-alpine
 
 WORKDIR /app
 
-COPY package.json .
+COPY package*.json ./
 RUN npm install
 
 COPY . .
+
+EXPOSE 3000
+
+ENV HOSTNAME "0.0.0.0"
 
 CMD ["npm", "run", "dev"]
