Use only client based API call

--- a/docker-compose-dev.yml
+++ b/docker-compose-dev.yml
@@ -26,6 +26,7 @@ services:
       - edu-pulse-network
 
   frontend:
+    container_name: frontend
     build:
       context: ./frontend
       dockerfile: Dockerfile.dev
