--- a/frontend/package.json
+++ b/frontend/package.json
@@ -24,6 +24,7 @@
         "leaflet": "^1.9.4",
         "next": "14.0.4",
         "next-auth": "^4.24.5",
+        "nuqs": "^2.2.3",
         "react": "^18",
         "react-bootstrap": "^2.10.2",
         "react-dom": "^18",
