--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,6 +22,7 @@
         "formik": "^2.4.6",
         "jwt-decode": "^4.0.0",
         "leaflet": "^1.9.4",
+        "lucide-react": "^0.503.0",
         "next": "14.0.4",
         "next-auth": "^4.24.5",
         "nuqs": "^2.2.3",
