--- a/frontend/package.json
+++ b/frontend/package.json
@@ -32,6 +32,7 @@
         "react-dropzone": "^14.2.3",
         "react-leaflet": "^4.2.1",
         "react-loader-spinner": "^6.1.6",
+        "react-player": "^2.16.0",
         "react-quill": "^2.0.0",
         "react-redux": "^9.1.2",
         "react-spinners": "^0.13.8",
